[package]
name = "hax-engine-names"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Dummy crate containing all the Rust names the hax engine should be aware of"

[dependencies]

