[package]
name = "hacspec-aes"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/aes.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
