[package]
name = "hacspec-gf128"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/gf128.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
hacspec-dev = { git = "https://github.com/hacspec/hacspec.git" }

[[bench]]
name = "benchmarks"
harness = false
