[package]
name = "hacspec-gimli"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/gimli.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }

[dev-dependencies]
hacspec-dev = { git = "https://github.com/hacspec/hacspec.git" }
