[package]
name = "lob_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
candid = "0.9.6"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0" }
