[package]
name = "hacspec-sha1"
version = "0.1.0"
authors = ["PLR <51248199+plredmond@users.noreply.github.com>"]
edition = "2018"

[lib]
path = "src/sha1.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec.git" }
hacspec-derive = { git = "https://github.com/hacspec/hacspec.git" }
secret_integers = { git = "https://github.com/hacspec/hacspec.git" }
abstract_integers = { git = "https://github.com/hacspec/hacspec.git" }
