[package]
name = "sha256"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"

[lib]
path = "src/sha256.rs"

[dependencies]
hax-lib-macros.workspace = true
hax-secret-integers.workspace = true

[features]
secret_independence = ["hax-secret-integers/secret_independence"]