[package]
name = "hax-frontend-exporter"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
description = "Provides mirrors of the algebraic data types used in the Rust compilers, removing indirections and inlining various pieces of information."

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
hax-adt-into.workspace = true
paste = "1.0.11"

tracing = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
extension-traits = { version = "1.0.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
cfg-if = "1.0.0"

[features]
default = ["full"]
full = ["dep:tracing", "dep:itertools", "dep:extension-traits", "dep:lazy_static"]
