[package]
name = "hax-lint"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
hax-diagnostics.workspace = true
tracing.workspace = true

[dev-dependencies]
regex = "1"
lazy_static = "1.4"
assert_cmd = "2.0"
